Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80579

wrong uic dependencies in vcxproj output causing build loop with VS 2019

XMLWordPrintable

    • Windows
    • 9d7ed92f6e63cd2d1a1388874e54b37b5cfd01b7 (qt/qtbase/5.14) ed54545d0db2eb69fbbbce2e60b9a9c0f9e87e29 (qt/qtbase/5.12)

      I'm using qmake to generate a vcxproj file from the attached project (qmake -tp vc). When I compile this in VS 2019 using the latest v142 toolset, msbuild runs UIC every time to recompile the outputs, and I get the following warning:

      1>C:\Program Files (x86)\Microsoft Visual Studio\2019\Professional\MSBuild\Microsoft\VC\v160\Microsoft.CppCommon.targets(231,5): warning MSB8064: Custom build for item "..\src\forms\form.ui" succeeded, but specified dependency "c:\dev\test\2019\app\widget\twidget.h" does not exist. This may cause incremental build to work incorrectly.

       

      The additional dependencies declared in the vcxproj for the UIC custom build step appear to be incorrect. It refers to the header file from the .ui file, but it includes a relative path which msbuild is treating as relative to the project file, but the file doesn't exist at that path.

      This works with the v141 toolset despite the incorrect path, but not v142.

        1. vs2019_ui_dep.zip
          2 kB
          Hamish Moffatt
        For Gerrit Dashboard: QTBUG-80579
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            hmoffatt Hamish Moffatt
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes