Fix dependency resolution for extra compilers in VS projects

De-duplicate the code that calls the extra compiler's depend_command by
using the central function callExtraCompilerDependCommand. This one
actually tries to resolve dependencies unlike the removed code that
blindly resolved relative paths to the build directory.

This fixes dependencies reported by uic which need to be resolved
against what is in DEPENDPATH.

Fixes: QTBUG-80579
Change-Id: If482e50ff3eff716fefffee82004acc076b3a547
Reviewed-by: Kai Koehne <kai.koehne@qt.io>
(cherry picked from commit 9d7ed92f6e63cd2d1a1388874e54b37b5cfd01b7)
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>